<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_ads">About Our Ads</string>
    <string name="about_ads_body">"When the overlay is blue that means it's ready to show an ad.

When clicking the play button the ad will show and the overlay will return to its normal color - after this pressing play will begin clicking as usual.

 The overlay will ready an ad every few minutes but never while actively clicking."</string>
    <string name="accessibility_service">Accessibility Service</string>
    <string name="accessibility_service_description">"Enabling this accessibility service allows Automatic Clicker to send taps/clicks on your behalf.

\"Observe Your Actions\" is required for all accessibility services. Our software will never monitor or collect any data that you don't explicitly instruct it to."</string>
    <string name="accessibility_service_text">Starting the Automatic Clicker accessibility service allows this application to send clicks/taps on your behalf. You can disable it at any time but it will need to be enabled for Automatic Clicker to run.</string>
    <string name="action_type">Action Type</string>
    <string name="app_name">Automatic Clicker</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="auto_start_settings">Auto Open Settings</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="cancel">Cancel</string>
    <string name="change">Change</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="click_duration">Click Duration</string>
    <string name="clickswipe_duration">Click/Swipe Duration</string>
    <string name="close">Close</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="config_already_exists">"A saved configuration with that name already exists.

 Would you like to overwrite it?"</string>
    <string name="confirm_delete_target">Delete this target?</string>
    <string name="coordinates">Coordinates</string>
    <string name="copy">Copy</string>
    <string name="copy_verb">Copy</string>
    <string name="create">Create</string>
    <string name="current_configuration">Current Configuration</string>
    <string name="delay">Delay</string>
    <string name="description_click_coordinates">"The coordinates on your phone's screen to click."</string>
    <string name="description_click_duration">Set how long this click will be held down for.</string>
    <string name="description_click_duration_plural">Set the amount of time that each click is held down for.</string>
    <string name="description_clickswipe_duration_default">"Set the default duration of each action.

For clicks, this is how long the click will be held down.

For swipes, this controls how long the swipe will take to complete."</string>
    <string name="description_delay">Set the delay between clicks.</string>
    <string name="description_disable_after">"Set how many full runs to complete before disabling this action.

One full run includes any repeats. Other actions will not be affected.

(0 = Do Not Disable)"</string>
    <string name="description_end_coordinates">The ending coordinates to swipe.</string>
    <string name="description_end_delay">Set the delay that occurs after this action.</string>
    <string name="description_end_delay_default">Set the default delay that occurs after each action.</string>
    <string name="description_pause_on_app_change">"When enabled, clicking will pause when changing between applications.

This setting will also pause clicking if the Android pull down notification bar moves into the clicking area."</string>
    <string name="description_randomization_radius">"Set the radius in pixels around the target that the click/swipe coordinate will be randomly chosen from.

(0 = No Randomization)"</string>
    <string name="description_randomization_range">"Choose an interval of time from which to draw a random value from.

This value is then randomly added or subtracted from the delay.

(0 = No Randomization)"</string>
    <string name="description_repeat">"Set how many times to repeat this action before moving on to the next action.

(0 = Do Not Repeat)"</string>
    <string name="description_show_active_targets">"When enabled, targets will be visible and colored green when clicking your screen.

If disabled, targets will be invisible while clicking."</string>
    <string name="description_start_delay">Set the delay that occurs before this action.</string>
    <string name="description_start_delay_default">Set the default delay that occurs before each action.</string>
    <string name="description_stop_after">Select a trigger for pausing the application.</string>
    <string name="description_target_programmability">"When enabled, tapping a target will allow you to set its individual settings.

 When disabled, targets can only be moved."</string>
    <string name="do_not_disable">Do Not Disable</string>
    <string name="do_not_repeat">Do Not Repeat</string>
    <string name="end_coordinates_noun">End Coordinates</string>
    <string name="end_delay_title_noun">End Delay</string>
    <string name="header_advanced_settings">Advanced Settings:</string>
    <string name="header_basic_settings">Basic Settings:</string>
    <string name="header_default_settings">Default Settings:</string>
    <string name="header_delay">Delay:</string>
    <string name="header_randomization">Randomization:</string>
    <string name="header_settings">Settings:</string>
    <string name="instructions">Instructions</string>
    <string name="instructions_multi_target_configuring">Configuring A Target</string>
    <string name="instructions_multi_target_configuring_body">Tapping a target will allow you to configuring its settings. Each target can be individually configured with a variety of settings.</string>
    <string name="instructions_multi_target_overlay">The multi target mode overlay has five buttons that vary in function depending on whether you tap them or hold them.</string>
    <string name="instructions_multi_target_overlay_header">Using The Overlay</string>
    <string name="instructions_multi_target_proper_settings">"Your phone and its various apps have limitations on how they can be clicked and at what speed.

It is important to note that clicking faster than 50 milliseconds may cause an app not to register the click or possibly lock up your phone.

If either of these issues occur please lock your phone or power off your screen to stop the application and then change the configuration."</string>
    <string name="instructions_multi_target_proper_settings_header">Proper Settings</string>
    <string name="instructions_multi_target_subtitle">Multi Target Mode</string>
    <string name="instructions_multi_target_swipe">Holding the plus sign will add a new swipe target to your screen. These will swipe from the center of the circle labeled \"start\" towards the center of the circle labeled \"end\".</string>
    <string name="instructions_multi_target_swipe_header">Setting A Swipe Target</string>
    <string name="instructions_multi_target_target">"Tapping the plus sign will create a new target. Each target is numbered and will run in sequence. All clicks/swipes originate from the target's center. After the last target runs the sequence will loop back to the first."</string>
    <string name="instructions_multi_target_target_header">Adding Targets</string>
    <string name="instructions_take_a_moment">Please take a moment to read these instructions and learn how to use this application.</string>
    <string name="load">Load</string>
    <string name="manage_configurations">Manage Configurations</string>
    <string name="none">None</string>
    <string name="pause_on_app_change">Pause On App Change</string>
    <string name="pixels">Pixel(s)</string>
    <string name="randomization_radius">Randomization Radius</string>
    <string name="randomization_range">Randomization Range</string>
    <string name="save">Save</string>
    <string name="select_type">Select the type of action:</string>
    <string name="show_active_targets">Show Active Targets</string>
    <string name="start_delay_title_noun">Start Delay</string>
    <string name="stop_after">Stop After</string>
    <string name="target_programmability">Target Programmability</string>
    <string name="time_between_clicks">Time Between Clicks</string>
    <string name="title_disable_after">Disable After</string>
    <string name="title_duration">Duration</string>
    <string name="title_repeat">Repeat</string>
    <string name="update">Update</string>
    <string name="why_ads">Why Do We Show Ads?</string>
    <string name="why_ads_body">"At SimpleHat Software we want to offer the best applications we can to all our users, paid or free, without limiting what features are available.

However, we need to fund ongoing development for new features and the support of new devices.

It is our goal to make these advertisements as unobtrusive as possible for our users. We appreciate your understanding."</string>
</resources>