<?xml version="1.0" encoding="utf-8"?>
<!--suppress AndroidDomInspection -->
<LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:id="@id/scroll" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fadeScrollbars="false">
        <LinearLayout android:orientation="vertical" android:id="@id/main_container" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textColor="@color/colorCallout" android:paddingLeft="@dimen/list_padding" android:paddingRight="@dimen/list_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="25.0dip" android:text="@string/header_basic_settings" />
            <simplehat.automaticclicker.views.MultiSelectSettingView android:id="@id/action_type_container" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" app:description="@string/select_type" app:isGlobalDialog="true" app:title="@string/action_type" />
            <simplehat.automaticclicker.views.CoordinateSettingView android:id="@id/start_coordinate_container" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" app:description="@string/description_click_coordinates" app:isGlobalDialog="true" app:title="@string/coordinates" />
            <simplehat.automaticclicker.views.CoordinateSettingView android:id="@id/end_coordinate_container" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" app:description="@string/description_end_coordinates" app:isGlobalDialog="true" app:title="@string/end_coordinates_noun" />
            <simplehat.automaticclicker.views.IntervalWithRangeSettingView android:id="@id/start_delay_container" android:layout_width="fill_parent" android:layout_height="wrap_content" app:description="@string/description_start_delay" app:isGlobalDialog="true" app:title="@string/start_delay_title_noun" />
            <simplehat.automaticclicker.views.IntervalWithRangeSettingView android:id="@id/end_delay_container" android:layout_width="fill_parent" android:layout_height="wrap_content" app:description="@string/description_end_delay" app:isGlobalDialog="true" app:title="@string/end_delay_title_noun" />
            <simplehat.automaticclicker.views.IntervalSettingView android:id="@id/duration_container" android:layout_width="fill_parent" android:layout_height="wrap_content" app:description="@string/description_click_duration" app:isGlobalDialog="true" app:title="@string/title_duration" />
            <TextView android:textColor="@color/colorCallout" android:paddingLeft="@dimen/list_padding" android:paddingRight="@dimen/list_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="25.0dip" android:text="@string/header_advanced_settings" />
            <simplehat.automaticclicker.views.StringSettingView android:id="@id/count_container" android:layout_width="fill_parent" android:layout_height="wrap_content" app:description="@string/description_repeat" app:isGlobalDialog="true" app:mode="INTEGER" app:suffix="Time(s)" app:title="@string/title_repeat" app:zeroValueString="@string/do_not_repeat" />
            <simplehat.automaticclicker.views.StringSettingView android:id="@id/remove_after_container" android:layout_width="fill_parent" android:layout_height="wrap_content" app:description="@string/description_disable_after" app:isGlobalDialog="true" app:mode="INTEGER" app:suffix="Runs(s)" app:title="@string/title_disable_after" app:zeroValueString="@string/do_not_disable" />
            <TextView android:textColor="@color/colorCallout" android:paddingLeft="@dimen/list_padding" android:paddingRight="@dimen/list_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="25.0dip" android:text="@string/header_randomization" />
            <simplehat.automaticclicker.views.StringSettingView android:id="@id/randomization_radius_container" android:layout_width="fill_parent" android:layout_height="wrap_content" app:description="@string/description_randomization_radius" app:isGlobalDialog="true" app:mode="INTEGER" app:suffix="@string/pixels" app:title="@string/randomization_radius" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>