<?xml version="1.0" encoding="utf-8"?>
<!--suppress AndroidDomInspection -->
<android.support.constraint.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip">
            <LinearLayout android:orientation="horizontal" android:id="@id/load_container" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip">
                <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <TextView android:textSize="20.0sp" android:textColor="#ff000000" android:layout_gravity="center_vertical" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/current_configuration" />
                    <TextView android:textSize="14.0sp" android:id="@id/current_configuration_display" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:paddingBottom="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/none" />
                </LinearLayout>
                <Button android:padding="5.0dip" android:clickable="false" android:layout_width="0.0dip" android:layout_height="50.0dip" android:text="@string/load" android:layout_weight="1.0" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <Button android:id="@id/save" android:padding="5.0dip" android:layout_width="0.0dip" android:layout_height="50.0dip" android:text="@string/save" android:layout_weight="0.5" />
                <Button android:id="@id/update" android:padding="5.0dip" android:visibility="invisible" android:layout_width="0.0dip" android:layout_height="50.0dip" android:text="@string/update" android:layout_weight="0.5" android:backgroundTint="@color/colorAccent" />
            </LinearLayout>
            <TextView android:textColor="@color/colorCallout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="25.0dip" android:text="@string/header_advanced_settings" />
            <simplehat.automaticclicker.views.StopAfterSettingView android:id="@id/stop_after_container" android:layout_width="fill_parent" android:layout_height="wrap_content" app:description="@string/description_stop_after" app:isGlobalDialog="true" app:title="@string/stop_after" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>